--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -8,7 +8,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.paul.cruz.SigninActivity">
 
     <LinearLayout
@@ -37,14 +36,14 @@
             android:textColorHint="@color/white">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/email_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
+                android:inputType="textEmailAddress"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                app:backgroundTint="@color/white"
-                android:inputType="textEmailAddress"
-                />
+                app:backgroundTint="@color/white" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -55,17 +54,19 @@
             android:textColorHint="@color/white">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/password_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
+                android:inputType="textPassword"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:inputType="textPassword"
                 app:backgroundTint="@color/white" />
 
         </android.support.design.widget.TextInputLayout>
 
         <TextView
+            android:id="@+id/forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
