--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -9,9 +9,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.paul.cruz.SignupActivity">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -116,13 +114,16 @@
                         android:orientation="horizontal">
 
                         <android.support.v7.widget.AppCompatRadioButton
+                            android:id="@+id/male_rd"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             app:buttonTint="@color/white"
                             android:text="Male"
+                            android:checked="true"
                             android:textColor="@color/white" />
 
                         <android.support.v7.widget.AppCompatRadioButton
+                            android:id="@+id/female_rd"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
