--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="grey">#616161</color>
+    <color name="pink">#FF4081</color>
 </resources>
