--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/black"
-    tools:context="com.paul.cruz.MainActivity">
+    tools:context="com.amal.lrpd.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
