--- a/app/src/main/res/layout/content_main_screen.xml
+++ b/app/src/main/res/layout/content_main_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/screen_container"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.paul.cruz.MainScreenActivity"
+    tools:context="com.amal.lrpd.MainScreenActivity"
     tools:showIn="@layout/app_bar_main_screen">
 
 
